<resources>
    <string name="app_name">Find Doctor</string>
    <string name="providerTitle">Add Medical Provider</string>
    <string name="providerSubtitle">Please fill out below</string>
    <string name="providerButton">Create</string>
    <string name="gp">GP</string>
    <string name="consultant">Consultant</string>
    <string name="dentist">Dentist</string>
    <string name="hint_providerName">Name of Medical Provider</string>
    <string name="hint_providerDrName">Name of Doctor</string>
    <string name="hint_providerAddress">Address</string>
    <string name="hint_providerCity">City</string>
    <string name="numberOfDr">Number Of Doctor</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ %1$d</string>
    <string name="reportTitle">Providers Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Dr Amount</string>
    <string name="action_provider">Create Provider</string>
    <string name="action_report">Providers List</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">Find Doctor</string>
    <string name="nav_header_subtitle">voteforhomer@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">Find Doctor </string>
    <string name="aboutus_message">Welcome!\n\n Find your doctor now! \n\nGet treatment!!</string>

    <string name="providersNotFound">No Providers Yet…\nGo Make a Provider!</string>
    <string name="providerError">Error : Couldn\'t Make a provider…</string>
    <string name="providerDetails">Provider Details</string>

    <string name="providerName">Provider :</string>
    <string name="providerType">Provider Type :</string>
    <string name="dr">Dr :</string>
    <string name="providerAddress">Address :</string>
    <string name="providerCity">City :</string>
    <string name="map">Map</string>
    <string name="pic">Profile Pic</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="messageLoading">Please Wait...Loading...</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="action_location">Location</string>

    <string name="select_profile_image">Select Profile Image</string>


    <string name="button_addPlacemark">Add Placemark</string>
    <string name="text_Title">Title</string>
    <string name="text_titleHint">Enter Title</string>
</resources>