<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/reportFragment">

    <fragment
        android:id="@+id/providerFragment"
        android:name="ie.wit.finddoctor.ui.provider.ProviderFragment"
        android:label="@string/action_provider"
        tools:layout="@layout/fragment_provider" >
        <action
            android:id="@+id/action_providerFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="ie.wit.finddoctor.ui.report.ReportFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_providerFragment"
            app:destination="@id/providerFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reportFragment_to_providerDetailFragment"
            app:destination="@id/providerDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.wit.finddoctor.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/providerDetailFragment"
        android:name="ie.wit.finddoctor.ui.detail.ProviderDetailFragment"
        android:label="Provider Detail"
        tools:layout="@layout/fragment_provider_detail" >
        <action
            android:id="@+id/action_providerDetailFragment_to_reportFragment"
            app:destination="@id/reportFragment" />
        <argument
            android:name="providerid"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="ie.wit.finddoctor.ui.map.MapsFragment"
        android:label="Provider Map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_providerDetailFragment"
            app:destination="@id/providerDetailFragment" />
    </fragment>

</navigation>