<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/providerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.provider.ProviderFragment">

    <TextView
        android:id="@+id/providerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/providerTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/providerSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/providerTitle"
        android:layout_alignEnd="@+id/providerTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/providerSubtitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />


    <EditText
        android:id="@+id/providerName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="564dp"
        android:autofillHints=""
        android:hint="@string/hint_providerName"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/color_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerSubtitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/providerDrName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="508dp"
        android:hint="@string/hint_providerDrName"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/color_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/providerAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="508dp"
        android:hint="@string/hint_providerAddress"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/color_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerDrName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/providerCity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="508dp"
        android:hint="@string/hint_providerCity"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/color_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerAddress"
        app:layout_constraintVertical_bias="0.0" />


    <!--    <ProgressBar-->
    <!--        android:id="@+id/progressBar"-->
    <!--        style="?android:attr/progressBarStyleHorizontal"-->
    <!--        android:layout_width="349dp"-->
    <!--        android:layout_height="14dp"-->
    <!--        android:layout_above="@+id/providerButton"-->
    <!--        android:layout_alignEnd="@+id/providerSubtitle"-->
    <!--        android:layout_alignParentStart="true"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:indeterminate="false"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.526"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.7" />-->

    <Button
        android:id="@+id/providerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/providerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPic"
        app:layout_constraintVertical_bias="0.944" />

    <RadioGroup
        android:id="@+id/providerType"
        android:layout_width="181dp"
        android:layout_height="128dp"
        android:layout_above="@+id/editMap"
        android:layout_below="@+id/providerSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@id/providerCity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerCity"
        app:layout_constraintVertical_bias="0.234">

        <RadioButton
            android:id="@+id/GP"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gp" />

        <RadioButton
            android:id="@+id/consultant"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/consultant" />

        <RadioButton
            android:id="@+id/dentist"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/dentist" />

    </RadioGroup>

    <Button
        android:id="@+id/editMap"
        android:layout_width="101dp"
        android:layout_height="47dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="64dp"
        android:text="@string/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerCity"
        app:layout_constraintVertical_bias="0.01" />

<!--    <Button-->
<!--        android:id="@+id/editPic"-->
<!--        android:layout_width="117dp"-->
<!--        android:layout_height="47dp"-->
<!--        android:layout_marginStart="276dp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:text="@string/pic"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editMap"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/total"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="@string/total"-->
    <!--        android:textAppearance="@android:style/TextAppearance.Material.Medium"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.56"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.902" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/totalSoFar"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="@string/totalSoFar"-->
    <!--        android:textAppearance="@android:style/TextAppearance.Material.Medium"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.846"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.902" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/drAmount"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="@string/numberOfDr"-->
    <!--        android:textAppearance="@android:style/TextAppearance.Material.Medium"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.024"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.544" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/drAmount"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:autofillHints="Please Enter an Dr Amount"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/enter_amount"-->
    <!--        android:inputType="number"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.913"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.544" />-->

    <!--    <NumberPicker-->
    <!--        android:id="@+id/drAmountPicker"-->
    <!--        android:layout_width="40dp"-->
    <!--        android:layout_height="136dp"-->
    <!--        android:layout_alignEnd="@+id/providerSubtitle"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.938"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.566" />-->

</androidx.constraintlayout.widget.ConstraintLayout>